# feedbacksystem

./: .dockerignore  .gitignore  .travis.yml  51-main-file  51-secondary-file  91-secondary-file  LICENSE  README.md  build.gradle  codecov.yml  docker-compose-old.yml  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.prod.yml  docker-compose_prod.yml  kls_database.db  package-lock.json  package.json  scalastyle_config.xml  script.sh  settings.gradle  swagger.yml  task_1.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pr-title-checker-config.json  release.yml
.metals/: metals.mv.db
backup/: backup.py  (+1 more)
modules/fbs-eat/data_merger/: pyproject.toml
modules/fbs-eat/eat/: Dockerfile  pyproject.toml
modules/fbs-eat/eat/api/: run_eat.py
modules/fbs-eat/eat/api/analysis/: analysis.py
modules/fbs-eat/eat/api/assets/: style.css
modules/fbs-eat/eat/api/connect/: connecttominio.py  data_service.py
modules/fbs-eat/eat/api/dashboard/: dashboard.py
modules/fbs-eat/eat/api/dataPreProcessing/: CleanDataset.py
modules/fbs-eat/eat/api/dataTable/: table.py
modules/fbs-eat/eat/api/data_table/: table.py
modules/fbs-eat/eat/api/datapreprocessing/: chooseTaskType.py  cleandataset.py
modules/fbs-eat/eat/api/util/: analysis_util.py  dashboard_util.py  utilities.py
modules/fbs-pdf-checker/: Dockerfile  api.py  db.py  logic.py  main.py  model.py  pdf_extractor.py  preprocessor.py  promptgen.py  pyproject.toml  settings.py  submission_api.py
modules/fbs-sql-checker/: .dockerignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml  shell.nix
modules/fbs-sql-checker/api/: Dockerfile  Formatting.py  JSONCreator.py  Main.py  Model.py  Parser.py  ProAttributeChecker.py  SelAttributeChecker.py  TableChecker.py  attribute_common.py  data_store.py  datatypes.py  debug.py  error.py  formatting.py  json_creator.py  main.py  mask_aliases.py  model.py  parseDataThroughChecker.py  parse_data_through_checker.py  parser.py  pro_attribute_checker.py  profileStats.py  profile_test.py  query_processor.py  restats  sel_attribute_checker.py  solution_fetcher.py  table_checker.py  test_json_creator.py
modules/fbs-sql-checker/api/comparator/: comparator.py  sqlparse_comparator.py  sqlparse_comparator_test.py
modules/fbs-sql-checker/api/distance/: .gitignore  attribute_check.py  attribute_distance.py  constants.py  db_connection.py  distance_calc.py  equation_checker.py  format.py  result_log.py  table_check.py  table_distance.py
modules/fbs-sql-checker/api/modules/fbs-sql-checker/api/distance/log/: distance.txt
modules/fbs-sql-checker/distance/: attribute_check.py  attribute_distance.py  constants.py  db_connection.py  docker-compose.yml  equation_checker.py  format.py  main.py  query_parser.py  result_log.py  table_check.py  table_distance.py
modules/fbs-sql-generator/: Dockerfile  README.md  pyproject.toml
modules/fbs-sql-generator/poetry_env/: pyvenv.cfg
modules/fbs-sql-generator/src/: main.py
modules/fbs-sql-generator/src/connect/: connect.py
modules/fbs-sql-generator/src/data_manipulation/: data_manipulation.py
modules/fbs-sql-generator/src/database_information/: database_information.py
modules/fbs-sql-generator/src/dump/: dump.py
modules/fbs-sql-generator/src/enums/: datatype.py
modules/fbs-sql-generator/src/foreign_key_data/: foreign_key_data.py
modules/fbs-sql-generator/src/generate_data/: generate_data.py
modules/fbs-sql-generator/src/helper/: helper.py
modules/fbs-sql-generator/src/insert/: insert.py
modules/fbs-sql-generator/src/templates/: download.html  download_file.py  input.html  table.py  test.html
(+2279 files in other folders)
