[tool.poetry]
name = "fbs-sql-checker"
version = "0.1.0"
description = ""
authors = ["Technische Hochschule Mittelhessen"]
readme = "README.md"
packages = [{ include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
mo-sql-parsing = "^8.201.22242"
pymongo = "^4.2.0"
requests = "^2.28.1"
click = "8.0.2"
random2 = "^1.0.1"
pre-commit = "^2.20.0"
pylint = "^2.15.3"
tqdm = "^4.66.3"


[tool.poetry.dev-dependencies]
pylint = "^2.15.2"
black = "^22.8.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
