[tool.poetry]
name = "data-merger"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "data_merger"}]

[tool.poetry.dependencies]
python = "^3.10"
litestar = "^2.0.0a7"
uvicorn = "^0.22.0"
minio = "^7.1.14"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
