[tool.poetry]
name = "fbs-analytics-tool"
version = "0.1.0"
description = ""
authors = ["Jonas Wölfer <jonas.woelfer@mnd.thm.de>"]
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.13.1"
pandas = "^1.5.3"
dash = "^2.8.1"
dash-bootstrap-components = "^1.4.1"
gunicorn = "^20.1.0"
minio = "^7.1.14"
pymongo = "^4.6.3"
PyJWT = "^2.6.0"
flask_session = "^0.5.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pylint = "^2.17.4"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
